feat: officially agent instead of plugin
